2015-04-30  Kirit Saelensminde  <kirit@felspar.com>
 Revert the change from 2015-04-24

2015-04-24  Kirit Saelensminde  <kirit@felspar.com>
 Make sure that a server io_service is properly associated with the connection. This also changes client sockets to all share a single io_service.

2015-03-29  Kirit Saelensminde  <kirit@felspar.com>
 Allow apostrophes in the `fostlib::url::filepath_string` strings.

2014-11-26  Kirit Saelensminde  <kirit@felspar.com>
 Allow MIME binary bodies to be made from start/end memory pointers.

2014-11-05  Kirit Saelensminde  <kirit@felspar.com>
 Only set Date and Host headers if they're not already set.

2014-05-31  Kirit Saelensminde  <kirit@felspar.com>
 Be absolutely sure that the URL parser lock is held when the parsers destruct.

2014-05-29  Kirit Saelensminde  <kirit@felspar.com>
 Added ampersand to allowed characters in the file path of a HTTP request on the server.

2014-05-22  Kirit Saelensminde  <kirit@felspar.com>
 Change expected exceptions for some tests because some platforms (i.e. Ubuntu Trusty) don't give socket connect errors, only time out errors when data is sent.

2014-05-19  Kirit Saelensminde  <kirit@felspar.com>
 Change the way that `boost::filesystem::wpath` instances are converted from strings in order to fix a Boost bug on Android.

2014-05-14  Kirit Saelensminde  <kirit@felspar.com>
 No longer throw `not_implemented` exceptions from the low level networking code.
 Fix a bug where an exception wasn't always thrown when errors were reported reading from a socket.

2014-05-13  Kirit Saelensminde  <kirit@felspar.com>
 Include HTTP user agent response constructor useful for tests.

2014-05-11  Kirit Saelensminde  <kirit@felspar.com>
 Allow the MIME headers to be cast to JSON.

2014-05-10  Kirit Saelensminde  <kirit@felspar.com>
Allow a termination lambda to also be passed into the HTTP server to control when to stop it. The lambda is only checked after a connection is opened.
