@@ -1,5 +1,5 @@
 /*
-    Copyright 2008-2014, Felspar Co Ltd. http://support.felspar.com/
+    Copyright 2008-2015, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -24,19 +24,20 @@ namespace fostlib {
     /// A TCP/IP network connection from either a server or client
     class FOST_INET_DECLSPEC network_connection : boost::noncopyable {
         struct ssl;
-        boost::asio::io_service io_service;
+        std::auto_ptr< boost::asio::io_service > io_service;
         std::auto_ptr< boost::asio::ip::tcp::socket > m_socket;
         boost::asio::streambuf m_input_buffer;
         ssl *m_ssl_data;
     public:
         /// Used for server end points where accept returns a socket
-        network_connection(std::auto_ptr< boost::asio::ip::tcp::socket > socket);
+        network_connection(
+            std::auto_ptr< boost::asio::io_service > io_service,
+            std::auto_ptr< boost::asio::ip::tcp::socket > socket);
         /// Used for clients where a host is connected to on a given port number
         network_connection(const host &h, nullable< port_number > p = null);
 
         /// Non-virtual destructor so sub-classing is not allowed
         ~network_connection();
-
 
         /// Start SSL on this connection. After a successful handshake all traffic will be over SSL.
         void start_ssl();
